# haskell-security-action

./: CONTRIBUTING.md  LICENSE  README.md  action.yaml  cabal.project  flake.nix  github-action-scan.cabal
.github/workflows/: ci.yml
app/: Main.hs
nix/haskell.nix/modules/: static.nix  weeder.nix
nix/nixpkgs/overlays/: static.nix
