cabal-version:       3.8
name:                github-action-scan
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Scan for vulnerabilities and create advisories on GitHub
description:         Scan for vulnerabilities and create advisories on GitHub.
Homepage:            http://github.com/blackheaven/github-action-scan
tested-with:         GHC==9.8.2

executable github-action-scan-exe
  -- type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: app
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , optparse-applicative
    , text
    , github-rest
    , sarif
    , bytestring
    , zlib
    , http-types
    , base64
    , cabal-audit
    , Cabal-syntax
    , hsec-tools
    , fused-effects
    , containers
    , process
    , cabal-install
    , Cabal
    , kan-extensions
  default-language: Haskell2010
